# lua_source_code_learning

./: .gitignore  README.md
let-us-build-a-lua-interpreter/: build_win.bat
let-us-build-a-lua-interpreter/C02/dummylua-2-1/: CMakeLists.txt  main.c
let-us-build-a-lua-interpreter/C02/dummylua-2-1/clib/: luaaux.c
let-us-build-a-lua-interpreter/C02/dummylua-2-1/common/: luaobject.h  luastate.c  luastate.h
let-us-build-a-lua-interpreter/C02/dummylua-2-1/test/: p1_my_test.c  p1_my_test.h
let-us-build-a-lua-interpreter/C02/dummylua-2-1/vm/: luado.c
let-us-build-a-lua-interpreter/C02/dummylua-2-2/: CMakeLists.txt
let-us-build-a-lua-interpreter/C02/dummylua-2-2/clib/: luaaux.c
let-us-build-a-lua-interpreter/C02/dummylua-2-2/common/: lua.h  luaobject.h  luastate.c  luastate.h
let-us-build-a-lua-interpreter/C02/dummylua-2-2/test/: p2_test.c
let-us-build-a-lua-interpreter/C02/dummylua-2-2/vm/: luado.c  luagc.c  luagc.h
let-us-build-a-lua-interpreter/C02/dummylua-2-3/: CMakeLists.txt
let-us-build-a-lua-interpreter/C02/dummylua-2-3/clib/: luaaux.c
let-us-build-a-lua-interpreter/C02/dummylua-2-3/common/: lua.h  luaobject.h  luastate.c  luastate.h
let-us-build-a-lua-interpreter/C02/dummylua-2-4/: CMakeLists.txt
let-us-build-a-lua-interpreter/C03/dummylua-3/: CMakeLists.txt
let-us-build-a-lua-interpreter/C04/dummylua-4-2/: CMakeLists.txt
let-us-build-a-lua-interpreter/C04/dummylua-4-3/: CMakeLists.txt  main.c
lua-5.3.5/: CMakeLists.txt  build_win_release.bat  main.lua
lua-5.3.5/src/: linit.c  lua.c  yhlib.c  yhlib.h
(+56 files in other folders)
